--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,18 @@ body {
 }
 
 
+@media (max-width: 767px) {
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+}
+
 
 .body {
   min-width: 100vw;
