--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 @media (max-width: 767px) {
   nav {
     display: flex;
+    max-width: 100vw;
     align-items: center;
     justify-content: space-between;
     padding-top: 8px;
