--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
   nav {
     display: flex;
     max-width: 100vw;
+    max-height: 56px;
     align-items: center;
     justify-content: space-between;
     padding-top: 8px;
