--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,21 @@ body {
     z-index: 1;
   }
 
+  @media (max-width: 767px) {
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #ebfaeb;
+      z-index: 1;
+      max-width: 100vw;
+      max-height: 56px;
+    }
+  }
+
+
   nav {
     display: flex;
     align-items: center;
@@ -22,20 +37,6 @@ body {
     padding-right: 48px;
 }
 
-
-@media (max-width: 767px) {
-  nav {
-    display: flex;
-    max-width: 100vw;
-    max-height: 56px;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
-}
-}
 
 
 .logo {
