--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,7 @@ body {
     width: 100%;
     background-color: #ebfaeb;
     z-index: 1;
-    padding-bottom: 8px;
-    padding-top: 8px;
-    padding-left: 48px;
-    padding-right: 48px;
+
   }
 
   @media (max-width: 767px) {
@@ -27,10 +24,6 @@ body {
       z-index: 1;
       max-width: 100vw;
       max-height: 48px;
-      padding-bottom: 8px;
-      padding-top: 8px;
-      padding-left: 8px;
-      padding-right: 8px;
     }
   }
 
@@ -39,9 +32,28 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    padding-left: 48px;
+    padding-right: 48px;
 
 }
 
+@media (max-width: 767px) {
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    padding-left: 48px;
+    padding-right: 48px;
+padding-bottom: 8px;
+padding-top: 8px;
+padding-left: 8px;
+padding-right: 8px;
+}
+}
 
 
 .logo {
@@ -57,6 +69,7 @@ body {
   .logo img {
   width: fit-content;
   height: fit-content;
+  width: 20%;
 }
 
 
