--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 8px;
-    padding-top: 8px;
-    padding-left: 48px;
-    padding-right: 48px;
+    padding: 8px 48px;
   }
 
   
@@ -108,7 +105,15 @@ body {
     }
   }
 
-
+  @media (max-width: 767px) {
+    .menu-icon {
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 24px;
+      transform: translateY(-50%);
+    }
+  
 
 
   
@@ -174,23 +179,35 @@ body {
 
   
   ul {
-    list-style: none;
-    display: inline-flex;
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #ebfaeb;
+    padding: 8px 0;
   }
-  
+
   li {
-    margin-left: 1rem;
+    margin: 8px 24px;
   }
-  
+
   .nav-link {
-    color: #333;
-    text-decoration: none;
+    display: block;
+    text-align: center;
   }
+
+  
 
   .nav-link:hover {
     color: rgb(56, 120, 108);
     text-decoration: underline;
   }
+
+  .menu-icon.active + ul {
+    display: block;
+  }
+}
 
 
 
