--- a/styles.css
+++ b/styles.css
@@ -16,198 +16,75 @@ body {
 
 
 
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 8px 48px;
+
+  .navbar {
+    overflow: hidden;
+    background-color: #333;
+    font-size: 16px;
   }
-
   
-
-
-
-
-  .nav-menu {
+  .navbar-left {
+    float: left;
+  }
+  
+  .navbar-right {
+    float: right;
+  }
+  
+  .navbar-icon {
     display: none;
-  }
-  
-  /* This rule makes the hamburger icon visible on small screens */
-  .nav-toggle {
-    display: block;
-    background: none;
-    border: none;
+    float: right;
     cursor: pointer;
-    padding: 0;
-    width: 40px;
-    height: 40px;
   }
   
-  .hamburger {
+  .navbar a {
     display: block;
-    width: 20px;
-    height: 2px;
-    background-color: #333;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .hamburger::before,
-  .hamburger::after {
-    content: '';
-    display: block;
-    width: 20px;
-    height: 2px;
-    background-color: #333;
-    position: absolute;
-  }
-  
-  .hamburger::before {
-    top: -6px;
-  }
-  
-  .hamburger::after {
-    bottom: -6px;
-  }
-  
-  /* This rule shows the nav-menu when the nav-toggle is clicked */
-  .nav-menu.show {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: #ebfaeb;
-    z-index: 1;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .nav-menu.show li {
-    margin: 0;
+    color: white;
     text-align: center;
+    padding: 14px;
+    text-decoration: none;
   }
   
-  /* This rule hides the nav-menu on large screens */
-  @media (min-width: 768px) {
-    .nav-menu {
-      display: flex;
-      align-items: center;
-    }
-  
-    .nav-menu li {
-      margin-left: 1rem;
-    }
-  
-    .nav-toggle {
-      display: none;
-    }
-  }
-
-  @media (max-width: 767px) {
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 50%;
-      right: 24px;
-      transform: translateY(-50%);
-    }
-  
-
-
-  
-  .menu-links {
-    list-style: none;
-    display: flex;
-  }
-  
-  .menu-links li {
-    margin-left: 1rem;
-  }
-  
-  .hamburger-menu {
-    display: none;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    padding: 0;
-  }
-  
-  .hamburger-menu span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #333;
-    margin-bottom: 5px;
-  }
-  
- 
-    
-    .menu-links {
-      display: none;
-      flex-direction: column;
-      background-color: #ebfaeb;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      padding: 16px;
-    }
-  
-    .menu-links.show {
-      display: flex;
-    }
-  
-    .menu-links li {
-      margin: 0;
-      margin-bottom: 1rem;
-    }
-  
-    .hamburger-menu {
-      display: block;
-    }
-  
-
-
-  .logo {
-    align-items: left;
-    height: auto;
-  }
-  
-
-
-  
-  ul {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: #ebfaeb;
-    padding: 8px 0;
-  }
-
-  li {
-    margin: 8px 24px;
-  }
-
-  .nav-link {
-    display: block;
-    text-align: center;
-  }
-
-  
-
-  .nav-link:hover {
-    color: rgb(56, 120, 108);
+  .navbar a:hover {
     text-decoration: underline;
+    color: green;
   }
+  
+  @media screen and (max-width: 767px) {
+    .navbar-right {
+      display: none;
+    }
+  
+    .navbar-icon {
+      display: block;
+    }
+  
+    .navbar-mobile {
+      display: none;
+      position: absolute;
+      top: 55px;
+      right: 0;
+      background-color: #333;
+      overflow-x: hidden;
+      z-index: 1;
+    }
+  
+    .navbar-mobile a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  
+    .navbar-icon:hover + .navbar-mobile {
+      display: block;
+    }
+  }
+  
 
-  .menu-icon.active + ul {
-    display: block;
-  }
-}
+
+
+
+
 
 
 
