--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,11 @@ body {
     text-decoration: underline;
     color: green;
   }
+
+  .navbar-icon {
+    display: block;
+  }
+
   
   @media screen and (max-width: 767px) {
     .navbar-right {
@@ -56,7 +61,7 @@ body {
     }
   
     .navbar-icon {
-      display: block;
+      display: left;
     }
   
     .navbar-mobile {
