--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 
 
 
-
   .navbar {
     overflow: hidden;
     background-color: #333;
@@ -49,11 +48,10 @@ body {
     text-decoration: underline;
     color: green;
   }
-
+  
   .navbar-icon {
     display: block;
   }
-
   
   @media screen and (max-width: 767px) {
     .navbar-right {
@@ -61,7 +59,7 @@ body {
     }
   
     .navbar-icon {
-      display: left;
+      display: block;
     }
   
     .navbar-mobile {
@@ -84,6 +82,7 @@ body {
       display: block;
     }
   }
+  
   
 
 
