--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 
   .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #b8f5e0;
     font-size: 16px;
   }
   
@@ -28,6 +28,8 @@ body {
   
   .navbar-right {
     float: right;
+    display: flex;
+    align-items: right;
   }
   
   .navbar-icon {
@@ -38,7 +40,7 @@ body {
   
   .navbar a {
     display: block;
-    color: white;
+    color: rgb(62, 62, 62);
     text-align: center;
     padding: 14px;
     text-decoration: none;
@@ -46,7 +48,7 @@ body {
   
   .navbar a:hover {
     text-decoration: underline;
-    color: green;
+    color: rgb(109, 117, 109);
   }
   
   
