--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     overflow: hidden;
     background-color: #b8f5e0;
     font-size: 16px;
+    padding: 48px 16px;
   }
   
   .navbar-left {
