--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,10 @@ body {
     overflow: hidden;
     background-color: #b8f5e0;
     font-size: 16px;
-    padding:  48px 8px;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    padding-left: 48px;
+    padding-right: 48px;
   }
   
   .navbar-left {
