--- a/styles.css
+++ b/styles.css
@@ -592,6 +592,24 @@ display: none; /* initial state is hidden */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+
+
+@media (max-width: 768px) {
+  .popup {
+    display: none;
+    position: fixed; /* Stay in place */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  }
+
+
+
+
 /* Modal Content */
 .popup-content {
 background-color: #fefefe;
@@ -605,6 +623,9 @@ grid-area: content;
 max-height: calc(100vh - 96px); /* subtract 48px from top and bottom margins */
 padding: 24px;
 }
+
+
+
 
 
 .content-wrapper {
