--- a/styles.css
+++ b/styles.css
@@ -594,12 +594,9 @@ display: none; /* initial state is hidden */
 
 
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .popup {
-    display: none;
-    position: fixed; /* Stay in place */
-    left: 0;
-    top: 0;
+    display: flex;
     width: 100%; /* Full width */
     height: 100%;
     background-color: rgb(0,0,0); /* Fallback color */
