--- a/styles.css
+++ b/styles.css
@@ -597,6 +597,7 @@ display: none; /* initial state is hidden */
 @media (min-width: 768px) {
   .popup {
     display: flex;
+    padding-top: 0px;
     width: 100%; /* Full width */
     height: 100%;
     background-color: rgb(0,0,0); /* Fallback color */
@@ -621,6 +622,20 @@ max-height: calc(100vh - 96px); /* subtract 48px from top and bottom margins */
 padding: 24px;
 }
 
+@media (min-width: 768px) {
+  .popup-content {
+    background-color: #fefefe;
+    margin: auto;
+    border: 2px solid rgb(182, 215, 197);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    border-radius: 20px;
+    grid-area: content;
+    max-height: calc(100vh - 96px); /* subtract 48px from top and bottom margins */
+    padding: 24px;
+    }
+  }
 
 
 
