--- a/styles.css
+++ b/styles.css
@@ -623,6 +623,7 @@ padding: 24px;
 @media (min-width: 768px) {
   .popup-content {
     background-color: #fefefe;
+    padding: 24px;
     border: 2px solid rgb(182, 215, 197);
     width: 100%;
     height: 100%;
