--- a/styles.css
+++ b/styles.css
@@ -580,31 +580,40 @@ display: none; /* initial state is hidden */
 
 
 .popup {
-  display: none;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 56px; /* Location of the box */
-  left: 0;
+  position: fixed;
   top: 0;
-  width: 100%; /* Full width */
+  left: 0;
+  width: 100%;
   height: 100%;
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
+  z-index: 9999; /* Make sure the popup is on top of everything */
+  display: none; /* Hide the popup by default */
 }
 
 
-/* Modal Content */
 .popup-content {
-background-color: #fefefe;
-margin: auto;
-border: 2px solid rgb(182, 215, 197);
-width: 75%;
-height: 75%;
-position: relative;
-border-radius: 20px;
-grid-area: content;
-max-height: calc(100vh - 96px); /* subtract 48px from top and bottom margins */
-padding: 24px;
+  position: absolute;
+  top: 10%; /* Position the content in the middle of the screen */
+  left: 10%;
+  transform: translate(-10%, -10%); /* Move the content up and left by 50% of its own size */
+  padding: 24px; /* 24px padding for the content */
+  width: calc(100% - 24px); /* Take up 100% of the screen width minus 112px for the background */
+  height: calc(100% - 112px); /* Take up 100% of the screen height minus 112px for the background */
+  max-width: 600px; /* Limit the maximum width of the content */
+  max-height: 800px; /* Limit the maximum height of the content */
+  background-color: #fefefe; /* White background color */
+  border: 2px solid rgb(182, 215, 197); /* Green border */
+  border-radius: 20px; /* Rounded corners */
+}
+
+/* Popup styling for smaller devices */
+@media (max-width: 767px) {
+  .popup-content {
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    margin: 0; /* Remove the margin */
+    border-radius: 0; /* Remove the border radius */
+  }
 }
 
 
