--- a/styles.css
+++ b/styles.css
@@ -592,10 +592,11 @@ display: none; /* initial state is hidden */
 
 
 .popup-content {
+  display: none;
   position: absolute;
-  top: 10%; /* Position the content in the middle of the screen */
-  left: 10%;
-  transform: translate(-10%, -10%); /* Move the content up and left by 50% of its own size */
+  top: 50%; /* Position the content in the middle of the screen */
+  left: 50%;
+  transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
   padding: 24px; /* 24px padding for the content */
   width: calc(100% - 24px); /* Take up 100% of the screen width minus 112px for the background */
   height: calc(100% - 112px); /* Take up 100% of the screen height minus 112px for the background */
