--- a/styles.css
+++ b/styles.css
@@ -346,8 +346,8 @@ h4 {
   background-color: #ffffff;
   padding-left: 48px;
   padding-right: 48px;
-  padding-top: 16px;
-  padding-bottom: 24px;
+  padding-top: 48px;
+  padding-bottom: 56px;
 }
 
 @media (max-width: 768px) {
@@ -366,6 +366,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 24px;
+    padding-top: 24px;
     flex-wrap: wrap;
   }
 }
@@ -412,12 +413,14 @@ h4 {
   .card-text {
     text-align: left; /* align the text to the left */
     margin-bottom: 8px;
+    color: #6d6d6d;
   }
 
   
   .card h3 {
     font-size: 24px;
     margin-top: 0;
+    color: #6d6d6d;
     /* add more styles for the title */
   }
 
@@ -426,8 +429,8 @@ h4 {
 .about {
   background-color: #f5f4f4;
   padding-left: 48px;
-  padding-top: 24px;
-  padding-bottom: 48px;
+  padding-top: 48px;
+  padding-bottom: 56px;
   padding-right: 48px;
 }
 
@@ -580,7 +583,6 @@ display: none; /* initial state is hidden */
 
 
 .popup {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
