--- a/styles.css
+++ b/styles.css
@@ -581,6 +581,9 @@ display: none; /* initial state is hidden */
   border-color: rgb(173, 173, 173);
 }
 
+
+
+
 /* Popup styling for desktop screens */
 .popup {
   position: fixed;
@@ -596,12 +599,12 @@ display: none; /* initial state is hidden */
 .popup-content {
   position: absolute;
   top: 50%; /* Position the content in the middle of the screen */
-  left: 50%;
+  left: calc(50% - 448px); /* Center the content horizontally with 48px of margin on each side */
   transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
   padding: 24px; /* 24px padding for the content */
-  width: calc(100% - 112px); /* Take up 100% of the screen width minus 112px for the background */
+  width: 896px; /* Width of the content */
+  max-width: 90%; /* Limit the maximum width of the content to 90% of the screen width */
   height: calc(100% - 112px); /* Take up 100% of the screen height minus 112px for the background */
-  max-width: 600px; /* Limit the maximum width of the content */
   max-height: 800px; /* Limit the maximum height of the content */
   background-color: #fefefe; /* White background color */
   border: 2px solid rgb(182, 215, 197); /* Green border */
