--- a/styles.css
+++ b/styles.css
@@ -598,18 +598,18 @@ display: none; /* initial state is hidden */
 
 .popup-content {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 24px;
-  width: calc(100% - 112px);
-  height: calc(100% - 112px);
-  max-width: 900px;
-  max-height: 800px;
-  background-color: #fefefe;
-  border: 2px solid rgb(182, 215, 197);
-  border-radius: 20px;
-  overflow-x: hidden;
+  top: 50%; /* Position the content in the middle of the screen */
+  left: calc(50% - 424px); /* Center the content horizontally with 48px of margin on each side */
+  transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
+  padding: 24px; /* 24px padding for the content */
+  width: 728px; /* Width of the content */
+  max-width: 90%; /* Limit the maximum width of the content to 90% of the screen width */
+  height: calc(100% - 112px); /* Take up 100% of the screen height minus 112px for the background */
+  max-height: 900px; /* Limit the maximum height of the content */
+  background-color: #fefefe; /* White background color */
+  border: 2px solid rgb(182, 215, 197); /* Green border */
+  border-radius: 20px; /* Rounded corners */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 /* Popup styling for smaller devices */
