--- a/styles.css
+++ b/styles.css
@@ -597,6 +597,7 @@ display: none; /* initial state is hidden */
 }
 
 .popup-content {
+  display: none;
   position: absolute;
   top: 50%; /* Position the content in the middle of the screen */
   left: calc(50% - 424px); /* Center the content horizontally with 48px of margin on each side */
