--- a/styles.css
+++ b/styles.css
@@ -597,12 +597,10 @@ display: none; /* initial state is hidden */
 }
 
 .popup-content {
-  position: absolute;
+  position: fixed;
   padding: 24px;
-  width: 1000px;
   max-width: calc(100% - 112px);
-  height: calc(100% - 112px);
-  max-height: 700px;
+  max-height: calc(100% - 112px);
   background-color: #fefefe;
   border: 2px solid rgb(182, 215, 197);
   border-radius: 20px;
