--- a/styles.css
+++ b/styles.css
@@ -592,15 +592,14 @@ display: none; /* initial state is hidden */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
-  z-index: 9999; /* Make sure the popup is on top of everything */
   display: none; /* Hide the popup by default */
 }
 
 .popup-content {
   position: fixed;
   padding: 24px;
-  max-width: calc(100% - 112px);
-  max-height: calc(100% - 112px);
+ width: 700px;
+ height: 900px;
   background-color: #fefefe;
   border: 2px solid rgb(182, 215, 197);
   border-radius: 20px;
