--- a/styles.css
+++ b/styles.css
@@ -592,31 +592,32 @@ display: none; /* initial state is hidden */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
+  z-index: 9999; /* Make sure the popup is on top of everything */
   display: none; /* Hide the popup by default */
 }
 
 .popup-content {
-  position: fixed;
-  padding: 24px;
- width: 700px;
- height: 900px;
-  background-color: #fefefe;
-  border: 2px solid rgb(182, 215, 197);
-  border-radius: 20px;
-  overflow-x: hidden;
+  position: absolute;
+  top: 50%; /* Position the content in the middle of the screen */
+  left: 50%;
+  transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
+  padding: 24px; /* 24px padding for the content */
+  width: calc(100% - 56px); /* Take up 100% of the screen width minus 56px for the background */
+  max-width: 600px; /* Limit the maximum width of the content */
+  background-color: #fefefe; /* White background color */
+  border: 2px solid rgb(182, 215, 197); /* Green border */
+  border-radius: 20px; /* Rounded corners */
 }
-
-
 
 /* Popup styling for smaller devices */
 @media (max-width: 767px) {
   .popup-content {
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
     margin: 0; /* Remove the margin */
     border-radius: 0; /* Remove the border radius */
   }
 }
+
 
 
 
