overflow out on pop up

--- a/styles.css
+++ b/styles.css
@@ -594,6 +594,7 @@ display: none; /* initial state is hidden */
   background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
   z-index: 9999; /* Make sure the popup is on top of everything */
   display: none; /* Hide the popup by default */
+  overflow: auto;
 }
 
 .popup-content {
