--- a/styles.css
+++ b/styles.css
@@ -599,12 +599,11 @@ display: none; /* initial state is hidden */
 
 .popup-content {
   position: absolute;
-  top: 50%; /* Position the content in the middle of the screen */
-  left: 50%;
-  transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
   padding: 24px; /* 24px padding for the content */
   width: calc(100% - 56px); /* Take up 100% of the screen width minus 56px for the background */
-  max-width: 600px; /* Limit the maximum width of the content */
+  max-width: 900px; /* Limit the maximum width of the content */
+  height: calc(100% - 56px);
+  max-height: 680px;
   background-color: #fefefe; /* White background color */
   border: 2px solid rgb(182, 215, 197); /* Green border */
   border-radius: 20px; /* Rounded corners */
