--- a/styles.css
+++ b/styles.css
@@ -602,8 +602,7 @@ display: none; /* initial state is hidden */
   padding: 24px; /* 24px padding for the content */
   width: calc(100% - 56px); /* Take up 100% of the screen width minus 56px for the background */
   max-width: 900px; /* Limit the maximum width of the content */
-  height: calc(100% - 56px);
-  max-height: 680px;
+  height: 680px;
   background-color: #fefefe; /* White background color */
   border: 2px solid rgb(182, 215, 197); /* Green border */
   border-radius: 20px; /* Rounded corners */
