--- a/styles.css
+++ b/styles.css
@@ -597,17 +597,18 @@ display: none; /* initial state is hidden */
   overflow: auto;
 }
 
-.popup-content {
-  position: absolute;
-  padding: 24px; /* 24px padding for the content */
-  width: calc(100% - 56px); /* Take up 100% of the screen width minus 56px for the background */
-  max-width: 900px; /* Limit the maximum width of the content */
-  height: 680px;
-  background-color: #fefefe; /* White background color */
-  border: 2px solid rgb(182, 215, 197); /* Green border */
-  border-radius: 20px; /* Rounded corners */
-  display: block;
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
+  z-index: 9999; /* Make sure the popup is on top of everything */
+  display: none; /* Hide the popup by default */
+  position: relative; /* Add relative positioning */
 }
+
 
 /* Popup styling for smaller devices */
 @media (max-width: 767px) {
