--- a/styles.css
+++ b/styles.css
@@ -597,17 +597,19 @@ display: none; /* initial state is hidden */
   overflow: auto;
 }
 
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
-  z-index: 9999; /* Make sure the popup is on top of everything */
-  display: none; /* Hide the popup by default */
-  position: relative; /* Add relative positioning */
+.popup-content {
+  position: absolute;
+  top: 50%; /* Position the content in the middle of the screen */
+  left: 50%;
+  transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
+  padding: 24px; /* 24px padding for the content */
+  max-width: 90%; /* Limit the maximum width of the content */
+  max-height: 90%; /* Limit the maximum height of the content */
+  background-color: #fefefe; /* White background color */
+  border: 2px solid rgb(182, 215, 197); /* Green border */
+  border-radius: 20px; /* Rounded corners */
 }
+
 
 
 /* Popup styling for smaller devices */
