--- a/styles.css
+++ b/styles.css
@@ -604,7 +604,7 @@ display: none; /* initial state is hidden */
   transform: translate(-50%, -50%);
   padding: 24px;
   width: 90%; /* Set the width to 90% */
-  max-width: 600px;
+  max-width: 900px;
   height: 80%; /* Set the height to 80% */
   max-height: 600px; /* Limit the maximum height to 600px */
   background-color: #fefefe;
@@ -619,6 +619,8 @@ display: none; /* initial state is hidden */
 @media (max-width: 767px) {
   .popup-content {
     width: 100%; /* Full width */
+    height: 100vh;
+    max-height: none; /* Remove the max-height limit */
     margin: 0; /* Remove the margin */
     border-radius: 0; /* Remove the border radius */
   }
